[gd_scene load_steps=10 format=3 uid="uid://ba8j8ajmddtai"]

[ext_resource type="Script" uid="uid://t51xudcjie2v" path="res://ui/game_over/game_over.gd" id="1_ns3eh"]
[ext_resource type="Shader" uid="uid://du66ruvwxrmji" path="res://resources/shaders/color_rect_bg_blur.gdshader" id="2_4cp6t"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ns3eh"]
shader = ExtResource("2_4cp6t")
shader_parameter/blur_amount = 3.0
shader_parameter/mix_amount = 1.0
shader_parameter/color_over = Color(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5nexe"]

[sub_resource type="Animation" id="Animation_5nexe"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/mix_amount")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:material:shader_parameter/blur_amount")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [3.0]
}

[sub_resource type="Animation" id="Animation_4cp6t"]
resource_name = "fade_to_black"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/blur_amount")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [9.5e-08, 3.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:material:shader_parameter/mix_amount")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_ns3eh"]
resource_name = "fade_to_normal"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/mix_amount")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:material:shader_parameter/blur_amount")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [3.0, 9.5e-08]
}

[sub_resource type="Animation" id="Animation_6lpyu"]
resource_name = "you_died_animation"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4cp6t"]
_data = {
&"RESET": SubResource("Animation_5nexe"),
&"fade_to_black": SubResource("Animation_4cp6t"),
&"fade_to_normal": SubResource("Animation_ns3eh"),
&"you_died_animation": SubResource("Animation_6lpyu")
}

[node name="DeathScreen" type="CanvasLayer"]
script = ExtResource("1_ns3eh")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_ns3eh")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_right = 3.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="TitleLabel" type="RichTextLabel" parent="ColorRect"]
visible = false
material = SubResource("ShaderMaterial_5nexe")
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 1.0
offset_top = -62.0
offset_right = 1.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(1, 0, 0, 1)
theme_override_colors/font_selected_color = Color(1, 0, 0, 1)
theme_override_colors/selection_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 75
bbcode_enabled = true
text = "[center]You Died![/center]"
fit_content = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_4cp6t")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="Label_Timer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Label_Timer" to="." method="_on_label_timer_timeout"]
